# support-buddy

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  convention.md  demo.md  design-doc.md  pyproject.toml  requirement.md  requirements.txt
.github/workflows/: keep-alive.yml
.streamlit/: config.toml
data/knowledge/: account_billing.md  api_guide.md  error_codes.md  faq.md  features.md  integrations.md  known_issues.md  migration_guide.md  mobile_troubleshooting.md  plan_matrix.md  runbooks.md  security_compliance.md  sso_guide.md  troubleshooting.md
data/sample_logs/: api_webhook_failure.json  auth_sso_failure.json  desktop_crash.json  performance_degradation.json  sync_error.json
data/virtual_company/: company_profile.md  customers.md  sample_inquiries.md
src/: cli.py  config.py
src/api/: __init__.py  schemas.py  server.py
src/core/: i18n.py  models.py
src/core/ai/: __init__.py  client.py  prompts.py  tools.py
src/core/analyzer/: __init__.py  ai_inquiry.py  inquiry.py  log_analyzer.py  log_parser.py
src/core/exceptions/: __init__.py
src/core/knowledge/: __init__.py  engine.py  loader.py  store.py
src/core/responder/: __init__.py  drafter.py
src/integrations/email/: __init__.py  parser.py
src/integrations/github/: __init__.py  client.py
src/integrations/linear/: __init__.py  client.py
src/ui/: app.py  docs_browser.py  styles.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_api.py
tests/unit/core/: test_email_parser.py  test_i18n.py  test_responder.py
tests/unit/integrations/: test_github.py  (+1 more)
(+10 files in other folders)
